# ethminer

./: start_amd.bash  start_nvidia.bash
ethminer/: MinerAux.h
libethash-cl/: CLMiner.cpp  CLMiner.h
libethash-cuda/: CMakeLists.txt  CUDAMiner.cpp  CUDAMiner.h  ethash_cuda_miner.cpp  ethash_cuda_miner.h
libethcore/: Miner.h
